Great renaming and moving (#15)
* merge pom.xml

* add UserProfile and UserBio services with access validation

* remove trivial UserBio mapper class

* improve UserProfile get controller

* add UserFriendInviteService

* remove invite state

* huge segregation